[gd_scene load_steps=18 format=2]

[ext_resource path="res://Art/FencerSide.png" type="Texture" id=1]
[ext_resource path="res://Script/Fencer.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Foil.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/RightOfWayIndicator.tscn" type="PackedScene" id=4]
[ext_resource path="res://Art/Flags/germanyside.png" type="Texture" id=5]
[ext_resource path="res://Art/Flags/ukside.png" type="Texture" id=6]
[ext_resource path="res://Art/animation.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.45, 25.2375 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 31.0
height = 52.0

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 6 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Fencer" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="Foil" parent="." instance=ExtResource( 3 )]
position = Vector2( 55, 13 )
collision_layer = 2
collision_mask = 4

[node name="FencerArt" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="ArrowControl" parent="." instance=ExtResource( 4 )]
margin_left = -17.0
margin_top = -265.0
margin_right = -17.0
margin_bottom = -265.0

[node name="Arrow" parent="ArrowControl" index="0"]
margin_left = 0.0
margin_top = -28.0
margin_right = 30.0
margin_bottom = 45.0

[node name="PriorityTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="AttackTimer" type="Timer" parent="."]

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1, 4 )
scale = Vector2( 5, 5 )
shape = SubResource( 1 )

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
position = Vector2( 32, 43 )
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -26, -23 )
shape = SubResource( 2 )

[node name="Germanyside" type="Sprite" parent="."]
visible = false
scale = Vector2( 4, 4 )
texture = ExtResource( 5 )

[node name="Ukside" type="Sprite" parent="."]
visible = false
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 7 )
frame = 6

[node name="PauseTimer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="moving" from="." to="." method="_on_Fencer_moving"]
[connection signal="timeout" from="PriorityTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
[connection signal="timeout" from="PauseTimer" to="." method="_on_PauseTimer_timeout"]

[editable path="ArrowControl"]
